# ai-agents-101

./: 01-hello-socket.py  01-simple-agent-function-access.py  01-simple-agent-structured-output.py  01-simple-agent.py  02-agent-mcp-calendar.py  02-mcp-google-calendar.py  02-rag-leave-policy.py  02-short-term-memory.py  03-parallel-agents.py  03-simple-multi-agent.py  README.md  index.html  planning_assistant_graph  pyproject.toml
.devcontainer/: devcontainer.json
personal-assitant/: init.py  init_viz.py  tools.py
